# azzmos-0.1.2

./: Makefile.am  Makefile.in  TODO  aclocal.m4  config.h.in  configure  configure.ac
include/: Makefile.am  Makefile.in  azzmos-fe.h
include/azzmos/: Makefile.am  Makefile.in  common.h  db.h  htmlpage.h  httpheaders.h  list.h  regexpr.h  urinorm.h  uriobj.h  uriparse.h  uriresolve.h  utils.h
lib/: Makefile.am  Makefile.in  README  db.c  htmlpage.c  httpheaders.c  regexpr.c  urinorm.c  uriobj.c  uriparse.c  uriresolve.c  utils.c
src/: Makefile.am  Makefile.in  azzmos.c  uriresolve.c  uriresolve.h
test/: Makefile.am  Makefile.in  test_htmlpage.c  test_httpheaders.c  test_urilist.c  test_urinorm.c  test_uriobj.c  test_uriparse.c  test_uriresolve.c
